Closed Bug 16219 Opened 25 years ago Closed 25 years ago

[Prefs Migration] mail.pop3_gets_new_mail and mail.imap.new_mail_get_headers never migrate

Categories

(MailNews Core :: Profile Migration, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: laurel, Assigned: sspitzer)

Details

Using 10-12-09m11 NT 4.0
Happens with linux 6.0
Haven't checked mac yet

The pref mail.pop3_gets_new_mail which corresponds to the POP3 server panel pref
"Automatically download any new messages" (which is coupled with the biff/"Check
for mail every N minutes" pref) never migrates from 4.x prefs.js to seamonkey
prefs.js. Regardless of the enabled state, there is never an entry in the 5.0
prefs file.

Note: I'm not sure if we intend to implement this or not in seamonkey. No spec
info available.

1.  In 4.x Communicator, launch a POP3 profile.
2.  In 4.x Edit|Preferences|Mail&Newsgroups|Mail Servers.
    Select the POP3 server in the incoming mail servers list, then click Edit.
    On the General Tab/Panel, enable the option "Check for mail every N minutes"
and set a value for N minutes.
    Leave the "Automatically download any new messages" pref disabled.
    Confirm OK out of the mail server properties and again out of the prefs
dialog. Exit.
3.  Check the 4.x prefs.js file and notice the following:
       a.  mail.check_new_mail has a value of true
       b.  mail.check_time is set to the value of N minutes which you specified
       c.  mail.pop3_gets_new_mail has a value of false
4.  Migrate the profile to seamonkey, go to Messenger.
5.  Open the Accounts Setup dialog, select and expand the POP3 mail server so
you can see the Server panel.
6.  Notice the Server panel shows the pref for check new mail is enabled (good).
    There is no field in the Server panel for the "automatically download new
messages" pref, but that's another bug/issue.
7.  Check the seamonkey prefs.js file and notice:
       a.  mail.server.server1.check_new_mail has value of true
       b.  mail.server.server1.check_new_mail has value of N minutes
       c.  there is no entry for mail.server.server1.pop3_gets_new_mail
       d.  there isn't even a 4.x entry mail.pop3_gets_new_mail
8.  Repeating the migration process on POP3 profile having UI with the
check_new_mail enabled and the pop3_gets_new_mail disabled yields the same
result -- no entry.  (So it's not that we're setting the pref for opposite value
as some other bugs/prefs.)
QA Contact: gbush → laurel
I take that back -- there is a picture of POP3 server panel in the Account Setup
spec; it doesn't have this pref.  I don't know if that's an oversight or
intentional or what or whether there will be a tie-in to prefs spec.  cc: jglick
Oversight on my part.  I have added "Automatically download any new messages" as
a checkbox below the "Check for new mail every X minutes" checkbox on the
Account Setup UE spec.

http://gooey/client/5.0/specs/mail/accountSetup/images/AcctServerPop1.gif
accepting bug.
Target Milestone: M14
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Summary: [Prefs Migration] mail.pop3_gets_new_mail never migrates → [Prefs Migration] mail.pop3_gets_new_mail and mail.imap.new_mail_get_headers never migrate
the back end of this is fixed, re-assign to alecf so he can fix the ui.

mail.pop3_gets_new_mail and mail.imap.new_mail_get_headers get migrated to

mail.server.<serverid>.download_on_biff

the default in 5.0 for mail.server.<serverid>.download_on_biff is true.

I mention that because in 4.x, the default for mail.pop3_gets_new_mail was false
and the default mail.imap.new_mail_get_headers was true

so if you migrate, and you had defaults in 4.x, you would get false for pop and
true for imap, but any new accounts in 5.0 would get true.

I'm going to mark this fixed, and open a new bug on alecf about the ui.
new ui bug is #23661
OK using:
2000-06-07-08 m17 commercial build NT 4.0
2000-06-07-08 m17 commercial build mac OS 9.0
2000-06-07-10 m17 commercial build linux rh6.0

Verified both POP and IMAP prefs migrated as Seth spelled out in his comments.
I'm not aware of any way to set the IMAP pref in 4.x UI, so I just inserted
manually into 4.x prefs before migrating.  Worked.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.